libs/extractor/src/snapshots/extractor__tests__convert_tag-21.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box as={Variable} w=\"100%\" props={{animate:{duration: 1}}}></Box>\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "width",
                value: "100%",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((DevupAs0) => <DevupAs0 className=\"OLwidth-v100_c\" {...{ animate: { duration: 1 } }}></DevupAs0>)(Variable || \"div\");\n",
}
